- Changed the start directory of the file open dialog to the base directory of the current project.
- Improved search and replace file pattern, i.e. the default pattern has been changed from `*` to `*.gms`. The change is applied to all the cases where a file pattern can be configured.

Version 1.23.2
==================
- Fixed crash on open a non-gms file.
- Fixed missing project save when adding/removing files to subfolders of a project.
- Fixed persistent collapse and expanded state of projects, when studio is restarted. Before Studio did not store the information in all the cases.
- Improved Help View document theme according to the Studio light/dark theme, when starting Studio or changing Studio theme.
- Improved GAMS Licensing dialog behaviour on Windows, i.e. when Studio or GAMS is used in a directory with a Unicode name.
- Upgraded ti Qt 6.10.1

Version 1.23.1
==================
- Added release overview page to the GAMS Studio welcome page.
- Fixed dragging schematic list and dictionary from definitions and dropping to the instructions in Connect Editor.
- Improved view and edit experience with tooltips and different color schemes in Connect Editor.
- Improved GAMS run parameters use the relative path to the GMS file (from Working Directory perspective) if possible, to provide better directory Unicode name support on Windows.

Version 1.23.0
==================
- Added storing of the fold state for known source files.
- Added keyboard navigation and selection to the tables of the model library explorer.
- Added filter and search capability to the Project Explorer.
- Added switching of the default working directory when switching the project.
- Added instant save to the project options as long as the paths for working directory and base directory exist.
- Fix broken links to option document when pressing `F1` in solver option editor.
- Improved connect editor workflow by linking agent and option name to corresponding entry in connect document with `F1` hotkey.